# justnote

./: Cargo.toml  README.md
config/: Cargo.toml
config/src/: lib.rs
fb/: .gitignore  Cargo.toml  build.rs
fb/fbs/: note.fbs  vault_index.fbs  vault_info.fbs
fb/src/: lib.rs  note.rs  vault_index.rs  vault_info.rs
types/src/: lib.rs  note.rs  vault_index.rs  vault_index_entry.rs  vault_info.rs
ui/: Cargo.toml
ui/src/: app.rs  colors.rs  config.rs  logging.rs  main.rs  signals.rs  startup.rs  styles.rs  utils.rs
ui/src/components/: create_vault.rs  first_start.rs  mod.rs  typography.rs
ui/src/components/select_vault/: mod.rs  vault_list_item.rs
ui/src/components/vault_session/: editor.rs  explorer.rs  explorer_note_entry.rs  mod.rs  note_name.rs
ui/src/components/vault_session/explorer/: mod.rs  note_entry.rs  resize_bar.rs
vault/: Cargo.toml
vault/src/: auth.rs  lib.rs  paths.rs
vault/src/files/: mod.rs  notes.rs  vault.rs  vault_index.rs  vault_info.rs
vault/src/types/: mod.rs  note.rs  vault_index.rs  vault_index_entry.rs
