[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
freya = "0.3.3"
vault = { path = "../vault" }
types = { path = "../types" }
log = "0.4.27"
serde = "1.0.219"
serde_yaml = "0.9.34"

[dependencies.log4rs]
version = "1.3.0"
features = [
    "gzip",
    "background_rotation",
    "console_appender",
    "size_trigger",
    "fixed_window_roller",
    "rolling_file_appender"
]

